<resources>
    <string name="appName">Electron Orbitals</string>
    <string name="apology">Electron Orbitals doesn&#8217;t work with this device.</string>
    <string name="apologySubtext">OpenGL ES 3.0 is required.</string>

    <string name="menuFullscreen">Fullscreen</string>
    <string name="menuAbout">About</string>
    <string name="menuSettings">Settings</string>
    <string name="menuStore">Feedback</string>
    <string name="menuHelp">Help</string>

    <string name="askStore">View this app on the Google Play Store?"</string>
    <string name="askStoreYes">"OK"</string>
    <string name="askStoreNo">"Cancel"</string>

    <string name="complexNumbers">\u2102</string>
    <string name="realNumbers">\u211d</string>
    <string name="plusMinus">\u00b1</string>
    <string name="minusPlus">\u2213</string>

    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="colormono">Color / Mono</string>
    <string name="pause">Pause</string>
    <string name="error">Big exclamation point</string>

    <string name="prefUltraQuality_Title">Ultra quality rendering</string>
    <string name="prefUltraQuality_Summary">Slow on older devices</string>
    <string name="prefAxes_Title">Show axes</string>
    <string name="prefAxes_Summary">Red x-axis, green y-axis, blue z-axis</string>
    <string name="prefColorBlind_Title">Color blind mode</string>
</resources>
