<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuFullscreen"
        android:icon="@drawable/ic_fullscreen_white_24dp"
        android:title="@string/menuFullscreen"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuCardboard"
        android:icon="@drawable/cardboard"
        android:title="@string/menuCardboard"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuStore"
        android:title="@string/menuStore"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuAbout"
        android:title="@string/menuAbout"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuHelp"
        android:title="@string/menuHelp"
        app:showAsAction="never" />

</menu>
